tests/parser/syntax-errors/token-not-found/expected_rbracket_index_expr.choc
# RUN: choco-opt "%s" | filecheck "%s" --strict-whitespace

def foo():
    pass

foo[3

# CHECK:      SyntaxError (line 6, column 6): token of kind TokenKind.RSQUAREBRACKET not found.
# CHECK-NEXT: >>>foo[3
# CHECK-NEXT: >>>-----^
